--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -12,9 +12,8 @@ jobs:
     steps:
       - uses: actions/checkout@v1
       - run: yarn
-      - run: yarn test
       - uses: chromaui/action@v1
         # options required to the GitHub chromatic action
         with:
-          projectToken: 2wix88i1ziu
+          projectToken: k9o3kkyyyrs
           token: ${{ secrets.GITHUB_TOKEN }}
