--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.2",
   "private": false,
   "description": "Learn Storybook design system",
-  "main": "dist/index.js",
+  "main": "lib/index.js",
   "repository": "https://github.com/AJPalacios/learnstorybook-design-system.git",
   "author": "Adan Palacios",
   "license": "MIT",
@@ -25,7 +25,8 @@
     "build-storybook": "build-storybook -s public",
     "build-storybook-docs": "build-storybook -s public --docs",
     "release": "auto shipit",
-    "chromatic": "npx chromatic --project-token v5a81v88ao"
+    "chromatic": "npx chromatic --project-token v5a81v88ao",
+    "build:commonjs": "cross-env BABEL_ENV=production babel src --out-dir lib"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -53,8 +54,9 @@
     ]
   },
   "devDependencies": {
-    "@babel/cli": "^7.11.6",
-    "@babel/core": "^7.11.6",
+    "@babel/cli": "^7.12.1",
+    "@babel/core": "^7.12.3",
+    "@babel/preset-env": "^7.12.1",
     "@storybook/addon-a11y": "^6.0.21",
     "@storybook/addon-actions": "^6.0.21",
     "@storybook/addon-essentials": "^6.0.21",
